--- a/iasa-final/index.html
+++ b/iasa-final/index.html
@@ -4,19 +4,12 @@
     <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="description" content="">
+<meta name="description" content="IASA Group Aircraft Parts Supply">
 <meta name="author" content="Eric Willis">
 
-<title>
-  
-    Jekyll Boilerplate &middot; Bootstrap
-  
-</title>
+<title>Jekyll Boilerplate</title>
 
-<!-- Bootstrap core CSS -->
 <link href="/dist/css/bootstrap.css" rel="stylesheet">
-
-<link href="/assets/css/main.css" rel="stylesheet">
 
 <!-- Favicons -->
 <link rel="icon" href="/favicon.ico">
