Cleaned and added page class variable

--- a/iasa/index.html
+++ b/iasa/index.html
@@ -2,6 +2,7 @@
 layout: default
 title: Jekyll Boilerplate
 description: IASA Group Aircraft Parts Supply
+class: index
 ---
 
 <div class="container">
