--- a/iasa-final/index.html
+++ b/iasa-final/index.html
@@ -10,8 +10,6 @@
 <title>Jekyll Boilerplate</title>
 
 <link href="/dist/css/bootstrap.css" rel="stylesheet">
-
-<!-- Favicons -->
 <link rel="icon" href="/favicon.ico">
 
 <script>
@@ -24,12 +22,7 @@
 </script>
 
   </head>
-  <body class="bd-docs" data-spy="scroll" data-target=".bd-sidenav-active">
-    <a id="skippy" class="sr-only sr-only-focusable" href="#content">
-      <div class="container">
-        <span class="skiplink-text">Skip to main content</span>
-      </div>
-    </a>
+  <body class="index">
 
     <nav class="navbar navbar-light bg-faded">
   <div class="container">
@@ -83,7 +76,6 @@
 </footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
-<script>window.jQuery || document.write('<script src="/assets/js/vendor/jquery.min.js"><\/script>')</script>
 <script src="/dist/js/bootstrap.js"></script>
 
   </body>
