Added Some Content

--- a/iasa/commercial/index.html
+++ b/iasa/commercial/index.html
@@ -4,7 +4,62 @@ title: Iasa Commercial Aircraft Parts Supply and Services
 description: IASA Commercial Aircraft Parts Supply and Services
 class: commercial
 ---
-
-<div class="container">
-  <h2>Commercial</h2>
+<div class="title title-commercial">
+  <div class="container">
+    <h2>Commercial Services</h2>
+  </div>
 </div>
+
+
+<section class="container parts-sourcing">
+  <div class="row">
+    <div class="col-sm-8">
+      <h2>Aircraft Parts Sourcing</h2>
+      <p>Finding anything you need – just when you need it IASA Group supports airlines & fleet operators with comprehensive parts sourcing services worldwide. Using the IASA Group as your aviation supply chain partner allows you to easily and efficiently manage the logistics and documentation for thousands of airframe parts your operation requires, including:</p>
+    </div>
+    <div class="col-sm-4">
+      <img class="img-fluid m-x-auto d-block" src="{{ site.baseurl }}/assets/img/iasa-2.png" alt="Servicing Worldwide from Texas and Indiana">
+    </div>
+  </div>
+</section>
+
+<section class="content-bg commercial">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 col-md">
+        <p>When new aircraft parts are not readily available from inventory, you can utilize Our Aircraft Spares & Alternates Procurement (ASAP) services to determine if a hard to find aircraft or engine part, component or accessory, or an suitable and approved substitute, whether new, new surplus, overhauled, or serviceable, is available elsewhere in the market. Through this service, IASA Group's highly trained purchasing staff coordinate with Staff FAA-DARs and other airworthiness staff to make a determination if a suitable unit exists for customers with airplane-on-ground requirements (AOG requirements) or other critical needs to obtain their required aircraft parts quickly and ensure cost savings while complying with the highest standards of Quality Assurance.</p>
+      </div>
+      <div class="col-sm-12 col-md">
+        <p>All suppliers are evaluated and audited and all airplane parts, components and supplies are inspected by our quality assurance team according to ISO 9001:2008 and AS9100 standards. All airplane spare parts are supplied with the required airworthiness certificates such as FAA 8130, EASA (European Aviation Safety Agency), JAA Form One, import/export documentation as required and our customary warranty.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<div class="container repair-service">
+  <div class="row">
+    <div class="col-sm-4">
+      <img class="img-fluid m-x-auto d-block" src="{{ site.baseurl }}/assets/img/iasa-3.png" alt="Servicing Worldwide from Texas and Indiana">
+    </div>
+    <div class="col-sm-8">
+      <h2>Aircraft Component Repairs and Services</h2>
+      <p>Working with our partners at ASA is capable of meeting your project or recurring needs for structural, electrical/ avionics systems component repair needs; as well as your fleet engineering, design, certification and airworthiness needs!</p>
+    </div>
+  </div>
+</div>
+
+<section class="bg-inverse">
+  <div class="container">
+    <h2 class="xs-12">Aircraft Consumables & chemical Coatings</h2>
+    <div class="xs-6">
+      <p>
+        The IASA Group also carries a large supply of consumable and expendable items such as Hardware, oils, greases, paint, sealant, and adhesive, just to name a few. Consult our knowledgeable representatives as value added prior to your next scheduled inspection or maintenance evolution. We will save you time and money by drop shipping directly to your designated FBO, MRO or customer designated location. Bulk pricing is available on qualifying purchases.
+      </p>
+    </div>
+    <div class="xs-6">
+      <p>
+        IASA Group also provides special packaging of aviation related products according to the customer's required specification. This includes Boeing and Airbus approved standards and processing of Hazardous Material (HAZMAT) and Dangerous Goods according to all applicable standards according to UN, IATA & IMO Standards
+      </p>
+    </div>
+  </div>
+</section>
