--- a/iasa/index.html
+++ b/iasa/index.html
@@ -7,4 +7,32 @@ class: index
 
 <div class="container">
 
+  <div class="index-banner">
+    <h1 class="display-1">Keep Flying</h1>
+    <p>IASA Group, LLC is a value added provider of Aircraft Parts, Kitting Solutions, Specialized Seals, Aircraft Components and Accessories, Consumables and Chemical COatings to military, government, commercial and other fleet operators worldwide.
+    <div class="banner-cta">
+      <a href="/rfq" class="banner-button left">Request For Quote</a>
+      <a href="/contact" class="banner-button right">Contact</a>
+    </div>
+  </div>
+  <!-- End Banner -->
+
+  <div class="index-about">
+    <div class="row">
+      <div class="col-xs">
+        <h1>About IASA Group</h1>
+        <p>Headquartered in Texas we have multiple locations serving domestic and international customers globally perfectly positioning us to reduce your inventory and improve your profitability through by providing just-in-time material needs.</p>
+        <p>Established in 1999 in Dallas, Texas is a registered Minority/Women Owned Small Business. Our associates are focused on providing value-added parts and services to airlines, OEM’s and MRO’s in even in the most critical AOG situations.</p>
+      </div>
+      <div class="col-xs">
+        <img src="{{ site.baseurl }}/assets/img/iasa-9.png" alt="Servicing Worldwide from Texas and Indiana">
+      </div>
+    </div>
+  </div>
+  <!-- End About -->
+
+
+
+
+
 </div>
