--- a/iasa/about/index.html
+++ b/iasa/about/index.html
@@ -43,6 +43,9 @@ class: about
         </span>
         <h6 class="font-weight-bold">Joint Certification Program</h6>
       </div>
+      <div class="col-xs-12 col-md">
+        <img src="{{ site.baseurl }}/assets/img/sam-logo.png" class="img-fluid m-x-auto d-block">
+      </div>
     </div>
   </section>
 
