--- a/iasa/military/index.html
+++ b/iasa/military/index.html
@@ -5,6 +5,58 @@ description: IASA Military Parts and Services
 class: military
 ---
 
+<div class="title title-military">
+  <div class="container">
+    <h2>Military Services</h2>
+  </div>
+</div>
+
 <div class="container">
-  <h2>Military</h2>
+  <div class="row">
+    <div class="col-xs-12">
+      <h3>Supporting valued customers around the globe.</h3>
+      <p>Since the beginning, IASA Group has maintained a strict compliance with the ISO 9001:2008 standard throughout its operations. Our team is focused on meeting military and government needs across the globe, even the most pressing AOG and urgent deadlines, and providing a cost-effective solution for all our clients regardless of size and volume.</p>
+      <p>Our highly experienced, air transportation industry professionals are equipped with instant access to parts availability inventories worldwide, giving us the capability to locate even the hardest-to-find parts within your region or area of remote operations. IASA Group has the experience, systems, partners and knowledge to locate, quote your requested parts and repairs FAST. With extended office and shipping hours, we can cater to all your urgent, unique and AOG part requirements.</p>
+      <p>Additionally, the IASA Group offers consignment services for traceable surplus inventory from government, corporate, regional and international flight departments throughout the world.  Working through our partners are ASIG we are capable of meeting your project or recurring needs for structural, electrical/ avionics systems and other engineering, design, certification and airworthiness needs!</p>
+      <ul>
+        <li>Consignment Services</li>
+        <li>Aircraft Kitting Services</li>
+        <li>Aircraft Parts Sourcing</li>
+        <li>Repair and Overhaul Services</li>
+        <li>Procurement Outsourcing</li>
+        <li>Engineering and Design Services</li>
+      </ul>
+      <p>Whether your needs are aircraft specific or bulk volumes, let IASA handle your Aircraft Kitting needs.  Looking for engineered supply chain services for your operation, let IASA Group focus on your parts and logistics needs freeing you and your team to focus on mission readiness and flight ops.  Out team of dedicated professionals specialize in giving aging systems new life by providing kits and assemblies to maintain, overhaul and modify proven DOD equipment.  At IASA Group we have an array of kitting and supply chain management capabilities that our customers have come to rely on to help them overcome their most difficult supply chain barriers.</p>
+      <p>IASA Group is proud to team with Trelleborg Sealing Solutions to offer the most complete range of Trelleborg sealing solutions.  Trelleborg Sealing Solutions is the major international sealing provider, uniquely placed to offer dedicated seal design and development from their market-leading product and material portfolio.  Together with IASA we form a one-stop-shop providing the best in elastomer, thermoplastic, PTFE, and composite technologies for applications in aerospace, industrial and automotive industries.</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-12">
+      <h3>Aircraft Seals By Trelleborg Sealing Solutions</h3>
+      <p>IASA is authorized to resell Trelleborg products including Kits for various military platforms. Trelleborg products are used in almost every major commercial and military aircraft program and are commonly specified by leading aircraft manufacturers and OEM customers as sealing solutions on a wide range of critical applications.</p>
+      <ul>
+        <li>Airframes</li>
+        <li>Engines</li>
+        <li>Flight Controls</li>
+        <li>Actuation</li>
+        <li>Landing Gears</li>
+        <li>Wheel and Brake</li>
+      </ul>
+    </div>
+  </div>
+  <div class="row">
+    <h3>Custom Logistical Kitting Solutions</h3>
+    <ul>
+      <li>Reduced Operating Costs</li>
+      <li>Improved Part Availability</li>
+      <li>Reduced Inventory and Warehouse Space</li>
+      <li>Complete Part Traceability</li>
+      <li>All components are packaged into a single seal kit</li>
+    </ul>
+  </div>
+  <div class="row">
+    <h3>Aerospace Hardware, Consumables &amp; Chemical Coatings</h3>
+    <p>The IASA Group also carries a large supply of consumable and expendable items such as oils, greases, paint, sealant, and adhesive, just to name a few. Consult our knowledgeable representatives as value added prior to your next scheduled inspection or maintenance evolution. We will save you time and money by drop shipping directly to your designated FBO, MRO or customer designated location. Bulk pricing is available on qualifying purchases.</p>
+    <p>IASA Group also provides special packaging of aviation related products according to the customer's required specification. This includes Boeing and Airbus approved standards and processing of Hazardous Material (HAZMAT) and Dangerous Goods according to all applicable standards according to UN, IATA &amp; IMO Standards.</p>
+  </div>
 </div>
