--- a/iasa/contact/index.html
+++ b/iasa/contact/index.html
@@ -1,10 +1,39 @@
 ---
-layout: default
+layout: form
 title: Contact IASA Group
 description: Contact IASA Group for your Commercial and Military Aircraft Parts Supply Needs
 class: contact
 ---
 
 <div class="container">
+  <section>
+    <form class="contact-form">
+      <div class="form-group row">
+        <label for="name" class="col-sm-2 col-form-label">Name</label>
+        <div class="col-sm-10">
+          <input class="form-control" type="text" placeholder="name" id="name">
+        </div>
+      </div>
 
+      <div class="form-group row">
+        <label for="phone" class="col-xs-2 col-form-label">Phone Number</label>
+        <div class="col-xs-10">
+          <input class="form-control" type="tel" id="phone" placeholder="Phone Number">
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="email" class="col-xs-2 col-form-label">Email</label>
+        <div class="col-xs-10">
+          <input class="form-control" type="email" id="email" placeholder="Email">
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="message" class="col-sm-2 col-form-label">Message</label>
+        <div class="col-sm-10">
+          <textarea class="form-control" id="message" rows="4" placeholder="Include part number, NSN and quantity"></textarea>
+        </div>
+      </div>
+      <button type="submit" class="btn btn-primary w-100">Request Quote</button>
+    </form>
+  </section>
 </div>
