--- a/iasa/about/index.html
+++ b/iasa/about/index.html
@@ -11,7 +11,7 @@ class: about
 </div>
 
 <div class="container">
-  <section class="about">
+  <section class="about p-t-3 p-b-3">
     <div class="row">
       <div class="col-xs-12 col-sm">
         <p>Headquartered in Texas and serving domestic and international destinations from our Fort Wayne, Indiana distribution center, IASA maintains the following quality control and business certifications, representations and accreditations.</p>
@@ -23,7 +23,7 @@ class: about
       </div>
     </div>
   </section>
-  <section class="certificates">
+  <section class="certificates p-t-3 p-b-3">
     <div class="row text-xs-center">
       <div class="col-xs-12 col-md">
         <span class="d-block cert-tag">
