--- a/iasa/commercial/index.html
+++ b/iasa/commercial/index.html
@@ -11,19 +11,19 @@ class: commercial
 </div>
 
 
-<section class="container parts-sourcing">
+<section class="container parts-sourcing p-t-3 p-b-3">
+  <h3>Aircraft Parts Sourcing</h3>
   <div class="row">
-    <div class="col-sm-8">
-      <h2>Aircraft Parts Sourcing</h2>
+    <div class="col-md-8">
       <p>Finding anything you need – just when you need it IASA Group supports airlines & fleet operators with comprehensive parts sourcing services worldwide. Using the IASA Group as your aviation supply chain partner allows you to easily and efficiently manage the logistics and documentation for thousands of airframe parts your operation requires, including:</p>
     </div>
-    <div class="col-sm-4">
+    <div class="col-md-4">
       <img class="img-fluid m-x-auto d-block" src="{{ site.baseurl }}/assets/img/iasa-2.png" alt="Servicing Worldwide from Texas and Indiana">
     </div>
   </div>
 </section>
 
-<section class="content-bg commercial">
+<div class="content-bg commercial p-t-3 p-b-3">
   <div class="container">
     <div class="row">
       <div class="col-sm-12 col-md">
@@ -34,32 +34,37 @@ class: commercial
       </div>
     </div>
   </div>
-</section>
+</div>
 
-<div class="container repair-service">
+<div class="container repair-service p-t-3 p-b-3">
+
   <div class="row">
     <div class="col-sm-4">
       <img class="img-fluid m-x-auto d-block" src="{{ site.baseurl }}/assets/img/iasa-3.png" alt="Servicing Worldwide from Texas and Indiana">
     </div>
     <div class="col-sm-8">
-      <h2>Aircraft Component Repairs and Services</h2>
+      <h3>Aircraft Component Repairs and Services</h3>
+
       <p>Working with our partners at ASA is capable of meeting your project or recurring needs for structural, electrical/ avionics systems component repair needs; as well as your fleet engineering, design, certification and airworthiness needs!</p>
     </div>
   </div>
 </div>
 
-<section class="bg-inverse">
+<div class="bg-inverse p-t-3 p-b-3">
   <div class="container">
-    <h2 class="xs-12">Aircraft Consumables & chemical Coatings</h2>
-    <div class="xs-6">
-      <p>
-        The IASA Group also carries a large supply of consumable and expendable items such as Hardware, oils, greases, paint, sealant, and adhesive, just to name a few. Consult our knowledgeable representatives as value added prior to your next scheduled inspection or maintenance evolution. We will save you time and money by drop shipping directly to your designated FBO, MRO or customer designated location. Bulk pricing is available on qualifying purchases.
-      </p>
-    </div>
-    <div class="xs-6">
-      <p>
-        IASA Group also provides special packaging of aviation related products according to the customer's required specification. This includes Boeing and Airbus approved standards and processing of Hazardous Material (HAZMAT) and Dangerous Goods according to all applicable standards according to UN, IATA & IMO Standards
-      </p>
+    <h3>Aircraft Consumables & chemical Coatings</h3>
+
+    <div class="row">
+
+      <div class="col-xs-12 col-sm-6">
+        <p>
+          The IASA Group also carries a large supply of consumable and expendable items such as Hardware, oils, greases, paint, sealant, and adhesive, just to name a few. Consult our knowledgeable representatives as value added prior to your next scheduled inspection or maintenance evolution. We will save you time and money by drop shipping directly to your designated FBO, MRO or customer designated location. Bulk pricing is available on qualifying purchases.
+        </p>
+      </div>
+      <div class="col-xs-12 col-sm-6">
+        <p>IASA Group also provides special packaging of aviation related products according to the customer's required specification. This includes Boeing and Airbus approved standards and processing of Hazardous Material (HAZMAT) and Dangerous Goods according to all applicable standards according to UN, IATA & IMO Standards</p>
+      </div>
+
     </div>
   </div>
-</section>
+</div>
