--- a/iasa/index.html
+++ b/iasa/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Jekyll Boilerplate
+title: IASA Group Aircraft Parts Supplier
 description: IASA Group Aircraft Parts Supply
 class: index
 ---
@@ -17,7 +17,7 @@ class: index
   </div>
   <!-- End Banner -->
 
-  <section class="index-about">
+  <section class="index-about p-t-3 p-b-3">
     <div class="row">
       <div class="col-xs-12 col-sm">
         <h1>About IASA Group</h1>
