--- a/iasa/about/index.html
+++ b/iasa/about/index.html
@@ -4,7 +4,7 @@ title: About IASA Group
 description: IASA Group Aircraft Parts Supply
 class: about
 ---
-<div class="title title-commercial">
+<div class="title title-about">
   <div class="container">
     <h2>About</h2>
   </div>
