--- a/iasa/contact/index.html
+++ b/iasa/contact/index.html
@@ -1,6 +1,6 @@
 ---
 layout: form
-title: Contact IASA Group
+title: Contact
 description: Contact IASA Group for your Commercial and Military Aircraft Parts Supply Needs
 class: contact
 ---
