--- a/iasa/index.html
+++ b/iasa/index.html
@@ -5,17 +5,27 @@ description: IASA Group Aircraft Parts Supply
 class: index
 ---
 
-<div class="container">
-
   <div class="index-banner">
-    <h1 class="display-1">Keep Flying</h1>
-    <p>IASA Group, LLC is a value added provider of Aircraft Parts, Kitting Solutions, Specialized Seals, Aircraft Components and Accessories, Consumables and Chemical COatings to military, government, commercial and other fleet operators worldwide.
-    <div class="banner-cta">
-      <a href="/rfq" class="banner-button left">Request For Quote</a>
-      <a href="/contact" class="banner-button right">Contact</a>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8 offset-md-2">
+          <h1 class="display-1">Keep Flying</h1>
+          <p>IASA Group, LLC is a value added provider of Aircraft Parts, Kitting Solutions, Specialized Seals, Aircraft Components and Accessories, Consumables and Chemical COatings to military, government, commercial and other fleet operators worldwide.
+          <div class="banner-cta row">
+            <div class="col-sm-6 p-t-1 m-b-1">
+              <a href="{{ site.baseurl }}/rfq" class="btn-block text-xs-center btn btn-outline-primary text-uppercase">Request For Quote</a>
+            </div>
+            <div class="col-sm-6 p-t-1 m-b-1">
+              <a href="{{ site.baseurl }}/contact" class="btn-block text-xs-center btn btn-outline-primary text-uppercase">Contact</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
   <!-- End Banner -->
+
+<div class="container">
 
   <section class="index-about p-t-3 p-b-3">
     <div class="row">
